# flask_postgres_backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.py  docker-compose.yml  env  gunicorn_starter.sh  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: README.md  workflow.yml
app/: __init__.py  api_spec.py  enums.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: __init__.py  resource_view.py
app/controllers/: __init__.py  resource_controller.py
app/core/: __init__.py  extensions.py  log.py  log_config.py
app/core/exceptions/: app_exceptions.py
app/core/notifications/: notifier.py
app/core/repository/base/: sql_base_repository.py
app/core/service_interfaces/: __init__.py  auth_service_interface.py  event_handler_interface.py
app/events/: __init__.py  event_data_structure.py  event_notification_handler.py  event_subscription_handler.py
app/health/: __init__.py  health_check.py
app/models/: __init__.py  resource_model.py
app/repositories/: __init__.py  cache_object.py  resource_repository.py
app/schema/: __init__.py  resource_schema.py
app/services/: __init__.py  auth_service.py  redis_service.py
app/static/: swagger.json
app/utils/: __init__.py  auth.py  validator.py
migrations/versions/: 01df752190bc_initial_migration.py
tests/: base_test_case.py  test_app.py
tests/controllers/: test_resource_controller.py
tests/data/: __init__.py  test_resource_data.py
tests/model/: test_resource_model.py
tests/service/: test_auth_service.py
tests/views/: test_resource_routes.py
