[tool.poetry]
name = "flask-api-postgres-enterprise"
version = "0.1.0"
description = ""
authors = ["Michael Asumadu <masumadu@archsolutions.online>"]
readme = "README.md"
packages = [{include = "flask_api_postgres_enterprise"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.2.2"
flask-sqlalchemy = "^3.0.3"
flask-swagger-ui = "^4.11.1"
apispec = "^6.3.0"
marshmallow = "^3.19.0"
apispec-webframeworks = "^0.5.2"
marshmallow-enum = "^1.5.1"
blinker = "^1.6.2"
pinject = "^0.14.1"
flask-cors = "^3.0.10"
flask-marshmallow = "^0.15.0"
flask-migrate = "^4.0.4"
healthcheck = "^1.3.3"
pyjwt = "^2.6.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
bson = "^0.5.10"
redis = "^4.5.4"
faker = "^18.6.2"
marshmallow-sqlalchemy = "^0.29.0"
setuptools = "^67.7.2"
pre-commit = "^3.3.1"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.5"
flask-testing = "^0.8.1"
pytest = "^7.3.1"
fakeredis = "^2.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
